<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Posyandu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_daftar">Daftar</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_jadwal">Jadwal</string>
    <string name="title_activity_tips">Tips Pola Makan Sehat Anak</string>
    <string name="title_activity_pedoman_gizi">PedomanGizi</string>
    <string name="title_activity_bbi">BBI</string>
    <string name="title_activity_tbi">TBI</string>
    <string name="title_activity_air">Air</string>
    <string name="title_ibu">Ibu</string>
    <string name="title_umum">Umum</string>
    <string name="title_anak">Anak</string>

    <!-- String untuk Title -->
    <string name="title_dashboard">MENU</string>
    <string name="title_sub_dashboard">Pelayanan, Tips, Info, Kegiatan yang ada di posyandu</string>

    <!-- String untuk Hint -->
    <string name="hint_nama_anak">Nama Buah Hati</string>
    <string name="hint_nama_ortu">Nama Orang Tua</string>
    <string name="hint_tgl_lahir">Tanggal Lahir Anak</string>

    <!-- String untuk Button -->
    <string name="btn_mulai">Mulai</string>
    <string name="btn_ganti_foto">Ganti Foto</string>
    <string name="btn_daftar">Daftar</string>

    <!-- String untuk ImageView -->
    <string name="img_splash_logo">Splash Logo</string>
    <string name="img_splash_sublogo">Splash Sublogo</string>
    <string name="img_photo_upload">Upload Photos</string>
    <string name="lingkaran">Lingkaran</string>

    <string-array name="JK_arrray">
        <item>Laki - Laki</item>
        <item>Perempuan</item>
    </string-array>

    <string name="title_activity_about">About</string>
    <string name="title_activity_bantuan">Bantuan</string>
    <string name="title_activity_kms">KMS</string>
    <string name="text_panjang">cm</string>
    <string name="text_berat">kg</string>
    <string name="text_umur">th</string>
    <string name="title_activity_tips_class">TipsClass</string>

</resources>
