<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:background="#f6f6f6" >

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/img_photo_upload"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_garisgaris"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/btnGantiFoto"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:padding="5dp"
        android:layout_below="@+id/imgPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/layer_btn_gantifoto"
        android:text="@string/btn_ganti_foto"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/txtNamaAnak"
        android:drawableLeft="@drawable/icon_user"
        android:drawablePadding="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGantiFoto"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_form"
        android:hint="@string/hint_nama_anak">
        
        <requestFocus /> 
        
     </EditText>

    <EditText
        android:id="@+id/txtTglLahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_tgl"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:drawablePadding="10dp"
        android:layout_alignLeft="@+id/txtNamaAnak"
        android:layout_below="@+id/txtNamaAnak"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_tgl_lahir" 
        android:background="@drawable/bg_form" />

    <Spinner
        android:id="@+id/spinJK"
        android:layout_width="match_parent"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTglLahir"
        android:layout_marginTop="5dp"
        android:paddingLeft="35dp"
        android:layout_below="@+id/txtTglLahir"
        android:background="@drawable/bg_form_jk" />

    <EditText
        android:id="@+id/txtNamaOrtu"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/icon_ortu"
        android:drawablePadding="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinJK"
        android:layout_below="@+id/spinJK"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_nama_ortu"
        android:background="@drawable/bg_form" />

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNamaOrtu"
        android:layout_below="@+id/txtNamaOrtu"
        android:layout_marginTop="8dp"
        android:background="@drawable/layer_btn_daftar"
        android:gravity="center"
        android:text="@string/btn_daftar"
        android:textColor="#FFFFFF" />

</RelativeLayout>